test/expected/include-unquoted.out
include "|"
        ^
9: error: path contains unquoted shell character
